Se agrego 1 comentario

--- a/menu.html
+++ b/menu.html
@@ -25,6 +25,10 @@
 						<li class="nav-item d-none d-lg-block"><a class="navbar-brand" href="#"><img class=" d-none d-lg-block mx-auto " src="  images/wayra-logo2.png" alt=""  width="180" height="120"></a></li>
 						<li class="nav-item d-none d-lg-block"><a class="nav-link d-none d-lg-block" href="#" data-target="#modal" data-toggle="modal">BEBIDAS</a></li>
 					</ul>
+					<!--==============================================
+					=            LOGOS DE RRSS TIPO BOTON            =
+					===============================================-->
+					
 					<li class="nav-item logo-rrss">
 						<a href="#" class="facebook" target="_blank"><i class="fa fa-facebook-square"></i></a>
 						<a href="#" class="instagram" target="_blank"><i class="fa fa-instagram"></i></a>
